src-tauri/check_output.txt
warning: unused imports: `Shadow` and `Stroke`
 --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:5:82
  |
5 | ... Transform, Stroke, Shadow};
  |                ^^^^^^  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:87:30
   |
87 | ...Some(mut glyph_pixmap) = Pixmap::new(w...
   |         ----^^^^^^^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `glyph_pixmap`
  --> D:\Workspace\lyric_video_maker_claude\crates\klyric-renderer\src\renderer\line_renderer.rs:87:30
   |
87 | ...let Some(mut glyph_pixmap) = Pixmap::n...
   |             ^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_glyph_pixmap`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `klyric-renderer` (lib) generated 3 warnings (run `cargo fix --lib -p klyric-renderer` to apply 3 suggestions)
    Checking lyric-video-maker v0.1.0 (D:\Workspace\lyric_video_maker_claude\src-tauri)
error: expected `;`, found keyword `if`
   --> src\video\muxer.rs:104:21
    |
104 |         .args(&args)
    |                     ^ help: add `;` here
105 |
106 |     if !output.status.success() {
    |     -- unexpected token

error[E0615]: attempted to take value of method `status` on type `&mut std::process::Command`
   --> src\video\muxer.rs:106:16
    |
106 |     if !output.status.success() {
    |                ^^^^^^ method, not a field
    |
help: use parentheses to call the method
    |
106 |     if !output.status().success() {
    |                      ++

error[E0615]: attempted to take value of method `stderr` on type `&mut std::process::Command`
   --> src\video\muxer.rs:107:54
    |
107 |         let stderr = String::from_utf8_lossy(&output.stderr);
    |                                                      ^^^^^^ method, not a field
    |
help: use parentheses to call the method
    |
107 |         let stderr = String::from_utf8_lossy(&output.stderr(_));
    |                                                            +++

warning: unused import: `Serializer`
 --> src\commands\export.rs:6:24
  |
6 | use serde::{Serialize, Serializer};
  |                        ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0615`.
warning: `lyric-video-maker` (lib) generated 1 warning
error: could not compile `lyric-video-maker` (lib) due to 3 previous errors; 1 warning emitted
